# hello-world-zephyr-with-azure

./: CMakeLists.txt  README.md
cmake-modules/: AddAzureSDKforC.cmake
src/: main.c
